[package]
name = "learn_fft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dft"
path = "src/dft.rs"

[[bin]]
name = "fft"
path = "src/fft.rs"

[[bin]]
name = "fft_loop"
path = "src/fft_loop.rs"

[[bin]]
name = "conv_naive"
path = "src/conv_naive.rs"

[[bin]]
name = "conv_fft"
path = "src/conv_fft.rs"

[dependencies]
num-complex = "0.4.5"
